--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <img src="./pictures/Logo.png" alt="" id="logo">
           </a>
           <a href="">
-            Bairdemore Child Care
+            Bairdmore Child Care
           </a>
         </div>
         <div class="toggle-navbar" id="mobile-menu">
@@ -59,8 +59,8 @@
       <div class="content-main">
         <img src="./pictures/main.png" alt="" />
         <div class="cover-main">
-          <h1 class="title">Bairdemore Child Care</h1>
-          <h2 class="sub-title">832 Bairdemore Blvd</h2>
+          <h1 class="title">Bairdmore Child Care</h1>
+          <h2 class="sub-title">832 Bairdmore Blvd</h2>
         </div>
       </div>
     </div>
@@ -78,12 +78,7 @@
         <div class="text-about">
           <h3 class="section-header" id="title-about">ABOUT</h3>
           <p>
-            askfklasjdfasfjajf asdkfjklasjf asfjjaskfja sfdjasdkfjas dfjasjfkas
-            fsa fasjkfjkas fdsad fasjfkjaksdfa sfjaskjdfasjlfjasjkdf
-            asdfjkajfjasjfjasdf asodfjadsf ;asdfkjkadsjf
-            asdfojsadklfjjaskfjasdjf
-            asfjasofasjfasdfjasdkfjaksaskfklasjdfasfjajf asdkfjklasjf
-            asfjjaskfja sfdjasdkfjas dfjasjfkas fsa fasjkfjkas fdsad.
+            THIS IS THE ABOUT SECTION 
           </p>
         </div>
       </div>
@@ -158,7 +153,7 @@
        <div class="content-content-contact">
         <h2 class="section-header">CONTACT</h2>
         <div class="contact-box">
-          <form class="form-contact" action="https://formsubmit.co/yayPasha@gmail.com"
+          <form class="form-contact" action="https://formsubmit.co/fa.childcare2022@gmail.com"
             method="POST">
             <h4>Name:</h4>
             <input name="name" required type="text" />
@@ -181,15 +176,15 @@
           <div class="information-contact">
            <div class="box">
             <div class="icon"><i class="fa-solid fa-location-dot"></i></div>
-            <h4>32 Boulevard Blvd</h4>
+            <h4>832 Bairdmore Blvd</h4>
            </div>
             <div class="box">
               <div class="icon"><i class="fa-solid fa-phone"></i></i></div>
-              <h4>(431) 337-8335</h4>
+              <h4>(204) 952-3009</h4>
            </div>
             <div class="box">
               <div class="icon"><i class="fa-solid fa-envelope"></i></div>
-              <h4>something<span class="invisible"> </span>@gmail.com</h4>
+              <h4>fa.childcare2022<span class="invisible"> </span>@gmail.com</h4>
            </div>
           </div>
         </div>
