--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@
       <div class="content-footer">
         <div class="content-content-footer">
         <img src="./pictures/Logo.png" alt="Logo">
-        <h2>Bairdemore</h2>
-        <h4>© Bairedemore 2022. All rights reserved.</h4>
+        <h2>Bairdmore Child Care</h2>
+        <h4>© Bairdmore Child Care 2022. All rights reserved.</h4>
       </div>
       </div>
     </div>
