--- a/thankyou.html
+++ b/thankyou.html
@@ -12,6 +12,8 @@
       href="https://fonts.googleapis.com/css2?family=DynaPuff&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="./pictures/Logo.png">
+
     <script
       src="https://kit.fontawesome.com/c2536198b5.js"
       crossorigin="anonymous"
@@ -26,7 +28,7 @@
           <a href="" id="logo">
             <img src="./pictures/Logo.png" alt="" id="logo" />
           </a>
-          <a href="/"> Bairdemore Child Care </a>
+          <a href="/"> Bairdmore Child Care </a>
         </div>
         <div class="toggle-navbar" id="mobile-menu">
           <span class="bar"></span>
@@ -78,8 +80,8 @@
       <div class="content-footer">
         <div class="content-content-footer">
           <img src="./pictures/KidsHandX2.png" alt="Logo" />
-          <h2>Bairdemore</h2>
-          <h4>© Bairedemore 2022. All rights reserved.</h4>
+          <h2>Bairdmore Child Care</h2>
+          <h4>© Bairdmore Child Care 2022. All rights reserved.</h4>
         </div>
       </div>
     </div>
