--- a/thankyou.html
+++ b/thankyou.html
@@ -79,7 +79,7 @@
     <div class="section-container">
       <div class="content-footer">
         <div class="content-content-footer">
-          <img src="./pictures/KidsHandX2.png" alt="Logo" />
+          <img src="./pictures/Logo.png" alt="Logo">
           <h2>Bairdmore Child Care</h2>
           <h4>© Bairdmore Child Care 2022. All rights reserved.</h4>
         </div>
