--- a/index.html
+++ b/index.html
@@ -78,7 +78,14 @@
         <div class="text-about">
           <h3 class="section-header" id="title-about">ABOUT</h3>
           <p>
-            THIS IS THE ABOUT SECTION 
+           Bairdmore Child Care is home daycare situated in Southpoint, Winnipeg, Manitoba. Conveniently located very close to Bairdmore school with access to playground.
+            We are fully licensed for 8 children. We opreate 1-2 to staff at all time and taking care of childrens including infants, toddlers, preschoolers, and school students 
+            with before and after school programmes. We respect and recognize each child’s individuality in terms of culture, personality and every attempt is maintain childs own
+            characterstics, and at the same time make them feel they are a part of group to which they belong. The daycare is adapted to meet the needs of children, so all the kids
+            can be active in participants. If you are worried about your little ones and want to leave them with a caring attendant then Bairdmore Child Care is right place for your
+            little ones.
+            
+        
           </p>
         </div>
       </div>
